--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
 		<title>Imposter Stomper</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Funny sus Among Us game with lots of bouncing.">
+		<meta name="image" content="Gifs/Rainbow.gif">
 		<link rel="icon" type="image/x-icon" href="Gifs/Rainbow.gif">
 	</head>
 
