--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 			</div>
 		</div>
 
+		<audio id="AMOGUS">
+			<source src="AMOGUS.mp3">
+		</audio>
+		
 		<script src="Amogus.js"></script>
 		<script src="GameScript.js"></script>
 		<link rel="stylesheet" href="GameStyle.css">
