--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 		</div>
 
 		<audio id="AMOGUS">
-			<source src="AMOGUS.mp3">
-		</audio>
+        		<source src="AMOGUS.mp3" type="audio/mp3">
+        		<source src="AMOGUS.ogg" type="audio/ogg">
+    		</audio>
 		
 		<script src="Amogus.js"></script>
 		<script src="GameScript.js"></script>
