--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="menu" class="item" style="position: absolute; top: 50%; left: 50%;">
 			<p style="margin: 0px; margin-bottom: 60px; font-size: 70px; font-weight: 700;">Imposter Stomper</p>
-			<button class="menuButton" onClick="gameStart(0)">Single Player</button><br>
+			<button class="menuButton" onClick="gameStart(0); initAudio()">Single Player</button><br>
 			<button class="menuButton" onClick="gameStart(1)">PVP</button><br>
 			<button class="menuButton" onClick="document.getElementById('howToPlay').style.display = 'block'">How To Play</button>
 			<div id="howToPlay" class="item" style="position: absolute; top: 50%; left: 50%; display: none;">
