Test minor changes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <head>
     <title>Imposter Stomper</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Funny sus Among Us game with lots of bouncing.">
-    <meta name="image" content="Gifs/Rainbow.gif">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover, user-scalable=no">
+    <meta name="image" content="https://darimk.github.io/ImposterStomper/Gifs/Rainbow.gif">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Imposter Stomper">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="application-name" content="Imposter Stomper">
+    <meta name="description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
+    <meta property="og:description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
+    <meta name="keywords" content="Among Us, amogus, Imposter, Crewmate, Web Game, Multiplayer, Online Game, Funny Game, Chaos, Fun, Free Game, Browser Game, Online Fun, Stomper, Bouncing, 2D, game">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Imposter Stomper">
+    <meta property="og:url" content="https://darimk.github.io/ImposterStomper/">
+    <meta property="og:site_name" content="Imposter Stomper">
+    <meta property="og:image" content="https://darimk.github.io/ImposterStomper/Gifs/Rainbow.gif">
+    <link rel="canonical" href="https://darimk.github.io/ImposterStomper/">
+    <link rel="apple-touch-icon-precomposed" href="Gifs/Rainbow.gif">
     <link rel="icon" type="image/x-icon" href="Gifs/Rainbow.gif">
+    <link rel="stylesheet" href="GameStyle.css">
 </head>
 
 <body onload="initAudio()">
@@ -79,6 +94,5 @@
     <script src="Amogus.js"></script>
     <script src="GameScript.js"></script>
     <script src="UpgradeManager.js"></script>
-    <link rel="stylesheet" href="GameStyle.css">
 </body>
 </html>
