--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Imposter Stomper</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover, user-scalable=no">
-    <meta name="image" content="https://darimk.github.io/ImposterStomper/Gifs/Rainbow.gif">
+    <meta name="image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Imposter Stomper">
@@ -14,10 +14,10 @@
     <meta name="keywords" content="Among Us, amogus, Imposter, Crewmate, Web Game, Multiplayer, Online Game, Funny Game, Chaos, Fun, Free Game, Browser Game, Online Fun, Stomper, Bouncing, 2D, game">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Imposter Stomper">
-    <meta property="og:url" content="https://darimk.github.io/ImposterStomper/">
+    <meta property="og:url" content="https://darimk.github.io/imposter-stomper/">
     <meta property="og:site_name" content="Imposter Stomper">
-    <meta property="og:image" content="https://darimk.github.io/ImposterStomper/Gifs/Rainbow.gif">
-    <link rel="canonical" href="https://darimk.github.io/ImposterStomper/">
+    <meta property="og:image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
+    <link rel="canonical" href="https://darimk.github.io/imposter-stomper/">
     <link rel="apple-touch-icon-precomposed" href="Gifs/Rainbow.gif">
     <link rel="icon" type="image/x-icon" href="Gifs/Rainbow.gif">
     <link rel="stylesheet" href="GameStyle.css">
