Add more seo stuff

--- a/index.html
+++ b/index.html
@@ -1,26 +1,61 @@
 ﻿<html>
-<head>
-    <title>Imposter Stomper</title>
-    <meta charset="utf-8">
+<html lang="en">
+    <!-- Important -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover, user-scalable=no">
-    <meta name="image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Imposter Stomper">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="application-name" content="Imposter Stomper">
+    <meta name="title" content="Imposter Stomper">
+    <meta name="author" content="Darim Khan">
     <meta name="description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
-    <meta property="og:description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
+    <meta name="image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
+    <meta name="url" content="https://dev.darim.dev/imposter-stomper/">
     <meta name="keywords" content="Among Us, amogus, Imposter, Crewmate, Web Game, Multiplayer, Online Game, Funny Game, Chaos, Fun, Free Game, Browser Game, Online Fun, Stomper, Bouncing, 2D, game">
+    <meta name="theme-color" content="#000000">
+    <meta property="og:site_name" content="Imposter Stomper">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Imposter Stomper">
-    <meta property="og:url" content="https://darimk.github.io/imposter-stomper/">
-    <meta property="og:site_name" content="Imposter Stomper">
+    <meta property="og:description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
     <meta property="og:image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
-    <link rel="canonical" href="https://darimk.github.io/imposter-stomper/">
-    <link rel="apple-touch-icon-precomposed" href="Gifs/Rainbow.gif">
-    <link rel="icon" type="image/x-icon" href="Gifs/Rainbow.gif">
+    <meta property="og:url" content="https://dev.darim.dev/imposter-stomper/">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Imposter Stomper">
+    <meta property="twitter:description" content="Funny sus 2D Among Us game with lots of bouncing (amogus).">
+    <meta property="twitter:image" content="https://darimk.github.io/imposter-stomper/Gifs/Rainbow.gif">
+    <meta property="twitter:url" content="https://dev.darim.dev/imposter-stomper/">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <!-- Apple -->
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Imposter Stomper">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- other stuff cuz why not -->
+    <meta name="application-name" content="Imposter Stomper">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="identifier-URL" content="https://dev.darim.dev/imposter-stomper/">
+    <!-- Link -->
     <link rel="stylesheet" href="GameStyle.css">
+    <link rel="icon" type="image/gif" href="Gifs/Rainbow.gif">
+    <link rel="shortcut icon" href="Gifs/Rainbow.gif">
+    <link rel="apple-touch-icon" href="Gifs/Rainbow.gif">
+    <link rel="apple-touch-startup-image" href="Gifs/Rainbow.gif">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="canonical" href="https://dev.darim.dev/imposter-stomper/">
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "VideoGame",
+            "name": "Imposter Stomper",
+            "url": "https://dev.darim.dev/imposter-stomper/",
+            "description": "Funny sus 2D Among Us game with lots of bouncing (amogus).",
+            "author": {
+                "@type": "Person",
+                "name": "Darim Khan"
+            }
+        }
+    </script>
+    <title>Imposter Stomper</title>
 </head>
 
 <body onload="initAudio()">
